ha/k8s/webserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver-api
  template:
    metadata:
      labels:
        app: webserver-api
    spec:
      containers:
      - name: webserver-api
        image: stevenewald/ha_db_webserver:latest
        ports:
        - containerPort: 3000
