ha/k8s/api-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-lb
spec:
  selector:
    app: webserver-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
