ha/k8s/website-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-lb
spec:
  selector:
    app: website-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
